[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-nitro-enclaves-image-format = "0.3.0"
sha2 = "0.9.9"
serde_json = "1.0.132"
anyhow = "1.0.93"
base64 = "0.22.1"
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
